# testes_exemplos

./: .gitignore  main.py
args_kwargs/: main.py
classes_e_csv/: carrinho.csv  carrinho_produtos.csv  main.py  produtos.csv
clojures_decorators/: app.py  log_produtos.csv  main.py  produtos.csv
csv/: main.py  programadores.csv
demo-20-03-sqlaalchemy/: .gitignore  config.py  pyproject.toml  requirements.txt
demo-20-03-sqlaalchemy/blog/: app.py
demo-20-03-sqlaalchemy/blog/configurations/: authentication.py  commands.py  database.py
demo-20-03-sqlaalchemy/blog/models/: __init__.py  post_model.py  profile_model.py  user_model.py
demo-20-03-sqlaalchemy/blog/views/: __init__.py  post_view.py  user_view.py
demo-20-03-sqlaalchemy/migrations/versions/: b0c93c4f8b23_criando_tabela_usuario_perfil_e_postagem.py
demo_+2/: index.js  main.py
demo_1/: main.py
demo_12_03_testando_aplicacao_flask/: .gitignore  pyproject.toml
demo_12_03_testando_aplicacao_flask/app/: __init__.py
demo_12_03_testando_aplicacao_flask/app/models/: estoque_model.py
demo_12_03_testando_aplicacao_flask/app/views/: __init__.py  estoque_view.py
demo_12_03_testando_aplicacao_flask/tests/: test_models.py  test_routes.py
demo_bandbook/: .env.example  requirements.txt
demo_flask_restful/: .env  .env.example  requirements.txt
demo_impulsionadora_01_04_21/: config.py
dicionarios/: main.py
flask_1/: app.py  devs.csv  requirements.txt
flask_test/: app.py
json_files/: main.py  poema.txt  posts.json  tasks.json
lambdas/: main.py  requirements.txt
list_comprehension/: main.py
(+83 files in other folders)
