[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Vinicius Abade <vinicius@kenzie.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
environs = "^9.3.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
