[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Vinicius Abade <vinicius@kenzie.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
environs = "^9.3.1"
psycopg2 = "^2.8.6"
Flask-Migrate = "^2.7.0"
Faker = "^7.0.1"
Flask-JWT-Extended = "^4.1.0"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
