[tool.poetry]
name = "python_flask_importacao"
version = "0.1.0"
description = ""
authors = ["Vinicius Abade <vinicius@kenzie.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
